// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a 404 error correctly 1`] = `
<BasicSection
  className="src-modules-error-components-error__section"
>
  <h1
    className="src-modules-error-components-error__heading"
  >
    <FaThumbsODown
      className="src-modules-error-components-error__icon"
    />
    Sorry—we couldn't find that info
  </h1>
</BasicSection>
`;

exports[`should render a 500 error correctly 1`] = `
<BasicSection
  className="src-modules-error-components-error__section"
>
  <h1
    className="src-modules-error-components-error__heading"
  >
    <FaThumbsODown
      className="src-modules-error-components-error__icon"
    />
    Oops—something went wrong
  </h1>
</BasicSection>
`;
